--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "nodejs-training",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "build": "tsc",
     "start": "nodemon ./dist/server.js",
-    "dev": "nodemon --exec ts-node ./src/server.ts",
+    "dev": "NODE_ENV=dev nodemon --exec ts-node ./src/server.ts",
     "prod": "npm run build && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test nodemon --exec ts-node ./src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,10 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.2",
-    "nodemon": "^2.0.15"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "typeorm": "^0.2.44"
   }
 }
